<resources>
    <string name="app_name">SkillCinema</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filmed_in_the_film">В фильме снимались</string>
    <string name="premiers">Премьеры</string>
    <string name="name_collection">name collection</string>
    <string name="filmography">Фильмография</string>
    <string name="name_ru">nameRu</string>
    <string name="find_out_about_premieres">Узнавай о премьерах</string>
    <string name="gallery">Галерея</string>
    <string name="film_stils">Кадры</string>
    <string name="images_from_filming">Изображения со съемок</string>
    <string name="posters">Постеры</string>
    <string name="covers">Обложки</string>
    <string name="name_ru_en">nameRu_En</string>
    <string name="rating_and_name">rating_and_name</string>
    <string name="yer_and_genres">yer_and_genres</string>
    <string name="description">description</string>
    <string name="all">All</string>
    <string name="worked_on_the_film">Над фильмом работали</string>
    <string name="all_images">All images</string>
    <string name="similar">Похожие</string>
    <string name="all_films">All films</string>
    <string name="nameru">nameRu</string>
    <string name="name_en">nameEn</string>
    <string name="profession">profession</string>
    <string name="the_best">Лучшее</string>
    <string name="to_the_list">К списку</string>
    <string name="all_movies">Все</string>
    <string name="movies">movies</string>
    <string name="skill_cinema">Skill cinema</string>
    <string name="skip">Пропустить</string>
    <string name="viewed">Просмотренно</string>
    <string name="collections">Коллекции</string>
    <string name="create_collection">Создать коллекцию</string>
    <string name="nothing_found">К сожаления, по вашему запросу ничего не найденно</string>
    <string name="create_new_collection">Саздавай коллекции</string>
    <string name="search_settings">Настройки поиска</string>
    <string name="show">Показывать</string>
    <string name="all_type">Все</string>
    <string name="films">Фильмы</string>
    <string name="tv_series">Сериалы</string>
    <string name="country">Страна</string>
    <string name="genres">Жанр</string>
    <string name="year">Год</string>
    <string name="from">с</string>
    <string name="_1999">1999</string>
    <string name="to">по</string>
    <string name="_2020">2020</string>
    <string name="rating">Рейтинг</string>
    <string name="_10">10</string>
    <string name="line"> - </string>
    <string name="_1">1</string>
    <string name="date">Дата</string>
    <string name="popularity">Популярность</string>
    <string name="not_viewed">Не просмотрен</string>
    <string name="apply">применить</string>
    <string name="label">Label</string>
    <string name="period">Период</string>
    <string name="search_between">Искать в период с</string>
    <string name="_1998">1998</string>
    <string name="_2023">2023</string>
    <string name="search_before">Искать в период до</string>
    <string name="choose">Выбрать</string>
    <string name="share_with_friends">Делись с друзьями</string>
    <string name="name_actor_ru">nameActorRu</string>
    <string name="name_actor_en">nameActorEn</string>
    <string name="description_actor">descriptionActor</string>
    <string name="show_all">Показать все</string>
    <string name="_0">0</string>
    <string name="label_collection">LabelCollection</string>
    <string name="add_to_collection">Добавить в коллекцию</string>
    <string name="create_your_collection">Создать свою коллекцию</string>
    <string name="next">next</string>
</resources>