<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.search.settings.SettingsSearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/labelSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/search_settings"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="32dp"
            android:text="@string/show"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelSettings" />

        <TextView
            android:id="@+id/searchAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_rectangle_and_left_radius"
            android:clickable="true"
            android:text="@string/all_type"
            android:textAlignment="center"
            android:textColor="@color/select_color_text_state"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/show"
            app:layout_constraintTop_toBottomOf="@+id/show"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/films"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_rectangle"
            android:clickable="true"
            android:text="@string/films"
            android:textAlignment="center"
            android:textColor="@color/select_color_text_state"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/serials"
            app:layout_constraintStart_toEndOf="@+id/searchAll"
            app:layout_constraintTop_toBottomOf="@+id/show"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/serials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/shape_rectangle_and_right_radius"
            android:clickable="true"
            android:text="@string/tv_series"
            android:textAlignment="center"
            android:textColor="@color/select_color_text_state"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/linearCountry"
            app:layout_constraintTop_toBottomOf="@+id/show"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/linearCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingStart="26dp"
            android:paddingTop="16dp"
            android:paddingEnd="26dp"
            android:paddingBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchAll">

            <TextView
                android:id="@+id/labelCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/country"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/searchAll"
                app:layout_constraintTop_toBottomOf="@+id/serials" />

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/country"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/labelCountry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/labelCountry" />

        </LinearLayout>

        <View
            android:id="@+id/spaceUnderCountry"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearCountry" />

        <LinearLayout
            android:id="@+id/linearGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="26dp"
            android:paddingTop="16dp"
            android:paddingEnd="26dp"
            android:paddingBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spaceUnderCountry">

            <TextView
                android:id="@+id/labelGenres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/genres"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/searchAll"
                app:layout_constraintTop_toBottomOf="@+id/spaceUnderCountry" />

            <TextView
                android:id="@+id/genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/genres"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/labelGenres"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/labelGenres" />
        </LinearLayout>

        <View
            android:id="@+id/spaceUnderGenres"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearGenres" />

        <LinearLayout
            android:id="@+id/linearYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="26dp"
            android:paddingTop="16dp"
            android:paddingEnd="26dp"
            android:paddingBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spaceUnderGenres">

            <TextView
                android:id="@+id/labelYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/year"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/searchAll"
                app:layout_constraintTop_toBottomOf="@+id/spaceUnderGenres" />

            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                app:layout_constraintBottom_toBottomOf="@+id/yearTo"
                app:layout_constraintEnd_toStartOf="@+id/yearFrom"
                app:layout_constraintTop_toTopOf="@+id/yearTo" />


            <TextView
                android:id="@+id/yearFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1999"
                app:layout_constraintBottom_toBottomOf="@+id/yearTo"
                app:layout_constraintEnd_toStartOf="@+id/to"
                app:layout_constraintTop_toTopOf="@+id/yearTo" />


            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                app:layout_constraintBottom_toBottomOf="@+id/yearTo"
                app:layout_constraintEnd_toStartOf="@+id/yearTo"
                app:layout_constraintTop_toTopOf="@+id/yearTo" />

            <TextView
                android:id="@+id/yearTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2020"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/labelYear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/labelYear" />
        </LinearLayout>

        <View
            android:id="@+id/spaceUnderYear"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearYear" />

        <TextView
            android:id="@+id/labelRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/rating"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/searchAll"
            app:layout_constraintTop_toBottomOf="@+id/spaceUnderYear" />

        <TextView
            android:id="@+id/ratingTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:labelFor="@id/rangeSlider"
            android:text="@string/_10"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/labelRating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/labelRating" />

        <TextView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line"
            app:layout_constraintBottom_toBottomOf="@id/ratingTo"
            app:layout_constraintEnd_toStartOf="@id/ratingTo"
            app:layout_constraintTop_toTopOf="@id/ratingTo" />

        <TextView
            android:id="@+id/ratingFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/rangeSlider"
            android:text="@string/_1"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingTo"
            app:layout_constraintEnd_toStartOf="@id/line"
            app:layout_constraintTop_toTopOf="@+id/ratingTo" />


        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangeSlider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:stepSize="1"
            android:valueFrom="1"
            android:valueTo="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelRating"
            app:values="@array/initial_slider_values" />

        <View
            android:id="@+id/spaceUnderRating"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rangeSlider" />

        <TextView
            android:id="@+id/sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:text="Сортировать"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spaceUnderRating" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_rectangle_and_left_radius"
            android:clickable="true"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="@color/select_color_text_state"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/sort"
            app:layout_constraintTop_toBottomOf="@+id/sort"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/popular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_rectangle"
            android:clickable="true"
            android:text="@string/popularity"
            android:textAlignment="center"
            android:textColor="@color/select_color_text_state"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/rating"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toBottomOf="@+id/sort"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_rectangle_and_right_radius"
            android:clickable="true"
            android:text="@string/rating"
            android:textAlignment="center"
            android:textColor="@color/select_color_text_state"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/serials"
            app:layout_constraintTop_toBottomOf="@+id/sort"
            tools:ignore="TouchTargetSizeCheck" />

        <View
            android:id="@+id/spaceUnderSort"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="32dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <CheckBox
            android:id="@+id/checkViewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:text="@string/not_viewed"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spaceUnderSort" />

        <Button
            android:id="@+id/applySettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:text="@string/apply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkViewed" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>