<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/posterUrlActor"
        android:layout_width="49dp"
        android:layout_height="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/posterUrlActor"
        app:layout_constraintStart_toEndOf="@+id/posterUrlActor"
        app:layout_constraintTop_toTopOf="@+id/posterUrlActor">

        <TextView
            android:id="@+id/nameActorRu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_actor_ru"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/nameActorEn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_actor_en"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/descriptionActor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/description_actor"
            android:textSize="12sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>